--- a/frontend/www/index.html
+++ b/frontend/www/index.html
@@ -9,63 +9,62 @@
 
 <link rel = "stylesheet" href = "css.css" >
 
+
 <head>
-  <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
+  <title>Google Signin</title>
+  <meta name="google-signin-client_id" content="943622887340-2qaen0te8c0q2of6pk9k4u691kpd52te.apps.googleusercontent.com">
+  <script src="https://apis.google.com/js/platform.js" asynch defer></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script> 
+    var profile;
+    function onSignIn(googleUser){
+      profile=googleUser.getBasicProfile;
+      $(".g-signin2").css("display","none");
+      $(".data").css("display","block");
+    }
+    function signOut(){
+      var auth2 = gapi.auth2.getAuthInstance();
+      auth2.signOut().then(function(){
+        alert("You've been successfully signed out");
+        $(".g-signin2").css("display","block");
+        $(".data").css("display","none");
+      });
+    }
+  </script>
+  
+  <style>
+    .g-signin2{
+      margin-left:500px;
+      margin-top:200px;
+    }
+    .data{
+      display:none;
+    }
+  </style>
 </head>
+<body>
+  <div class="g-signin2" data-onsuccess="onSignIn"></div>
+  <div class="data">
+    <button onclick="signOut()" class="btn btn-danger">SignOut</button>
+  </div>
+</body>
 
-<body >
 
 
-<img src= "logo.png"> 
 
 
-<button type="button" class="btn btn-success" onclick="location.href = 'postpage.html'">POST</button>
+<img src= "/images/logo.png">
+
+
+<button type="button" class="btn btn-success" onclick="location.href ='postpage.html'">POST</button>
 
 
 <button type="button" class="btn btn-danger">SUBSCRIBE</button>
 <button type="button" class="btn btn-warning">UNSUSCRIBE</button>
-
-<!-- these link buttons are just to move the last button -->
-
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-<button type="button" class="btn btn-link"></button>
-
-
 <button type="button" class="btn btn-info">LOGIN</button>
 
 <br>
 <br>
-
 
 
 <div id="blogPost"></div>
@@ -96,7 +95,7 @@
 	  return xhr;
 	}
 
-	url = "http://localhost:5000/sample_url"
+	url = "https://t-collective-268505.appspot.com/blogposts"
 	const xhr = createCORSRequest('GET',url);
 	const blog_post = document.getElementById("blogPost");
 	xhr.open('GET', url, true)
