Added more backend services

--- a/frontend/www/index.html
+++ b/frontend/www/index.html
@@ -28,7 +28,8 @@
         alert("You've been successfully signed out");
         $(".g-signin2").css("display","block");
         $(".data").css("display","none");
-      });
+      })
+
     }
   </script>
   
@@ -53,7 +54,7 @@
 
 
 
-<img src= "/images/logo.png">
+<img src= "images/logo.png">
 
 
 <button type="button" class="btn btn-success" onclick="location.href ='postpage.html'">POST</button>
